//  Copyright (c) 2013, Google Inc.  All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto2";

package tao;

message LinuxHostAdminRPCRequest {
  optional bytes subprin = 1; // = auth.Marshal(auth.SubPrin)
  optional string path = 2;
  repeated string args = 3;
  optional int32 pid = 4;
  optional string dir = 5;
  optional string container_type = 6;
  repeated string container_args = 7;
  optional int32 stdin = 8;
  optional int32 stdout = 9;
  optional int32 stderr = 10;
}

message LinuxHostAdminRPCHostedProgram {
  required bytes subprin = 1; // = auth.Marshal(auth.SubPrin)
  required int32 pid = 2;
}

message LinuxHostAdminRPCResponse {
  repeated LinuxHostAdminRPCHostedProgram child = 1;
  optional bytes prin = 2; // = auth.Marshal(auth.Prin)
  optional int32 status = 3;
}

